added extra functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <h1>{{title}}</h1>
 
-<h5 id="hint">(Extra Functionality: Try leaving some fields blank or inputting a string and hitting "Calculate", see what happens!)</h5>
+<h5 id="hint">(Extra Functionality: Try leaving some fields blank, using negative numbers, having a discount over 100%, or inputting a string and hitting "Calculate", see what happens!)</h5>
    
 
 <div class="row">
